initial updates, need to fix external a bit more